feat: SAFT completo AGT + NIF obrigatório
Backend:
- SaftDTO completo com estrutura AGT (AuditFile > Header > MasterFiles > SourceDocuments)
- Header com todos os campos obrigatórios
- CustomerDTO com BillingAddress, TaxCountryRegion, TaxType, TaxNumber
- SupplierDTO para fornecedores
- ProductDTO com ProductGroup, UnitOfMeasure, TaxType
- TaxTableDTO com IVA Normal/Reduzido/Isento
- InvoiceHeaderDTO com ATCUDCode, InvoiceType, Hash, HashControl
- InvoiceLineDTO com Tax, SettlementAmount
- InvoiceDocumentStatusDTO com Reason, DateChanged
- PaymentHeaderDTO com PaymentType, PaymentMethod
- PaymentLineDTO com SourceDocumentID
- PaymentDocumentStatusDTO

- NIF obrigatório no Student model (nullable = false)
- @NotBlank no StudentDTO para NIF
- @Valid no StudentController para create/update